===========================Update============================ -added boolean value (is_bought) to the db with alembic - added new Api resource is_bought which gets all items which are bought - created new routes in swagger.json file
